<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_address">Email Address:</string>
    <string name="password">Password:</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_the_shoestore">Welcome to the ShoeStore!</string>
    <string name="click_the_button_below_to_get_instructions_on_how_to_use_the_app">Click the button below to get instructions on how to use the app!</string>
    <string name="instructions">Instructions</string>
    <string name="welcome">Welcome!</string>
    <string name="go_to_shoe_list">Go To Shoe List</string>
    <string name="logout">Logout</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_a_shoe_to_the_list">Add a shoe to the list.</string>
    <string name="shoe_list_shoe_details">Shoe Name: %1$s\nCompany: %2$s\nShoe Size: %3$f\nDescription: %4$s\n</string>
    <string name="list_of_shoes">List of Shoes</string>
    <string name="add_a_shoe">Add a Shoe</string>
    <string name="keep_track_of_your_shoes">Keep track of your shoes!</string>
    <string name="the_next_screen_will_display_your_current_list_of_shoes_to_add_shoes_you_must_tap_on_the_button_on_the_bottom_right_of_the_screen_once_you_finish_filling_out_all_the_details_of_your_new_shoe_you_will_be_taken_back_to_your_now_updated_list_of_shoes">The next screen will display your current list of shoes. To add shoes you must tap on the + button on the bottom right of the screen. Once you finish filling out all the details of your new shoe, you will be taken back to your now updated list of shoes!</string>
</resources>
