<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/login"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeScreenFragment"
            app:destination="@id/welcomeScreenFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/welcomeScreenFragment"
        android:name="com.udacity.shoestore.fragments.WelcomeScreenFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome_screen">
        <action
            android:id="@+id/action_welcomeScreenFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.fragments.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/welcomeScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.fragments.ShoeListFragment"
        android:label="@string/list_of_shoes"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <argument
            android:name="shoeToAdd"
            android:defaultValue="@null"
            app:argType="com.udacity.shoestore.models.Shoe"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.fragments.ShoeDetailFragment"
        android:label="@string/add_a_shoe"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>