<?xml version="1.0" encoding="utf-8"?><!--I utilized a LinearLayout inside of a ScrollView here because the information displayed is fairly straightforward
 and I'd like the user to be able to scroll down in case their phone screen is smaller than the ones I tested with. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.fragments.LoginFragment">

    <data>

        <variable
            name="loginViewmodel"
            type="com.udacity.shoestore.viewmodels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/app_screen_side_margin">

            <TextView
                android:id="@+id/login_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/app_screen_top_padding"
                android:layout_marginBottom="@dimen/app_screen_bottom_padding"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="@dimen/screen_title_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/edit_text_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_box_height"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#546E7A">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/edit_text_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_box_height"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#546E7A">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_bottom_padding"
                android:onClick="@{() -> loginViewmodel.navigateToWelcomeScreen()}"
                android:text="@string/login" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/button_bottom_padding"
                android:onClick="@{() -> loginViewmodel.navigateToWelcomeScreen()}"
                android:text="@string/sign_up" />

        </LinearLayout>

    </ScrollView>
</layout>